force-app/main/default/objects/Genesys_Session_Event__c/fields/Action_Map_Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Action_Map_Display_Name__c</fullName>
    <label>Action Map Display Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>