force-app/main/default/objects/Genesys_Session_Event__c/fields/Action_Map_Id__c.field-meta.xml
<CustomField>
    <fullName>Action_Map_Id__c</fullName>
    <label>Action Map ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>