force-app/main/default/objects/Genesys_Session_Event__c/fields/Action_Map_Version__c.field-meta.xml
<CustomField>
    <fullName>Action_Map_Version__c</fullName>
    <label>Action Map Version</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>