force-app/main/default/objects/Genesys_Session_Event__c/fields/Action_State__c.field-meta.xml
<CustomField>
    <fullName>Action_State__c</fullName>
    <label>Action State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>