force-app/main/default/objects/Genesys_Session_Event__c/fields/Browser_Family__c.field-meta.xml
<CustomField>
    <fullName>Browser_Family__c</fullName>
    <label>Browser Family</label>
    <length>255</length>
    <type>Text</type>
</CustomField>