force-app/main/default/objects/Genesys_Session_Event__c/fields/Browser_Language__c.field-meta.xml
<CustomField>
    <fullName>Browser_Language__c</fullName>
    <label>Browser Language</label>
    <length>255</length>
    <type>Text</type>
</CustomField>