force-app/main/default/objects/Genesys_Session_Event__c/fields/Clicked_Element_Selector__c.field-meta.xml
<CustomField>
    <fullName>Clicked_Element_Selector__c</fullName>
    <label>Clicked Element Selector</label>
    <length>255</length>
    <type>Text</type>
</CustomField>