force-app/main/default/objects/Genesys_Session_Event__c/fields/Custom_Attributes__c.field-meta.xml
<CustomField>
    <fullName>Custom_Attributes__c</fullName>
    <label>Custom Attributes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>