force-app/main/default/objects/Genesys_Session_Event__c/fields/Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>Customer_Id__c</fullName>
    <label>Customer ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>