force-app/main/default/objects/Genesys_Session_Event__c/fields/Customer_Id_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_Id_Type__c</fullName>
    <label>Customer ID Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>