force-app/main/default/objects/Genesys_Session_Event__c/fields/Device_Category__c.field-meta.xml
<CustomField>
    <fullName>Device_Category__c</fullName>
    <label>Device Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>