force-app/main/default/objects/Genesys_Session_Event__c/fields/Device_Is_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Device_Is_Mobile__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Device Is Mobile</label>
    <type>Checkbox</type>
</CustomField>