force-app/main/default/objects/Genesys_Session_Event__c/fields/Geolocation_Country__c.field-meta.xml
<CustomField>
    <fullName>Geolocation_Country__c</fullName>
    <label>Geolocation Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>