force-app/main/default/objects/Genesys_Session_Event__c/fields/Geolocation_Country_Name__c.field-meta.xml
<CustomField>
    <fullName>Geolocation_Country_Name__c</fullName>
    <label>Geolocation Country Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>