force-app/main/default/objects/Genesys_Session_Event__c/fields/Geolocation_Locality__c.field-meta.xml
<CustomField>
    <fullName>Geolocation_Locality__c</fullName>
    <label>Geolocation Locality</label>
    <length>255</length>
    <type>Text</type>
</CustomField>