force-app/main/default/objects/Genesys_Session_Event__c/fields/Geolocation_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Geolocation_Postal_Code__c</fullName>
    <label>Geolocation Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>