force-app/main/default/objects/Genesys_Session_Event__c/fields/Geolocation_Region__c.field-meta.xml
<CustomField>
    <fullName>Geolocation_Region__c</fullName>
    <label>Geolocation Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>