force-app/main/default/objects/Genesys_Session_Event__c/fields/Geolocation_Timezone__c.field-meta.xml
<CustomField>
    <fullName>Geolocation_Timezone__c</fullName>
    <label>Geolocation Timezone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>