force-app/main/default/objects/Genesys_Session_Event__c/fields/Idle_Duration_Seconds__c.field-meta.xml
<CustomField>
    <fullName>Idle_Duration_Seconds__c</fullName>
    <label>Idle Duration Seconds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>