force-app/main/default/objects/Genesys_Session_Event__c/fields/IP_Organization__c.field-meta.xml
<CustomField>
    <fullName>IP_Organization__c</fullName>
    <label>IP Organization</label>
    <length>255</length>
    <type>Text</type>
</CustomField>