force-app/main/default/objects/Genesys_Session_Event__c/fields/Is_Authenticated__c.field-meta.xml
<CustomField>
    <fullName>Is_Authenticated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Authenticated</label>
    <type>Checkbox</type>
</CustomField>