force-app/main/default/objects/Genesys_Session_Event__c/fields/Messaging_Session__c.field-meta.xml
<CustomField>
    <fullName>Messaging_Session__c</fullName>
    <label>Messaging Session</label>
    <referenceTo>MessagingSession</referenceTo>
    <relationshipLabel>Genesys Session Events</relationshipLabel>
    <relationshipName>Genesys_Session_Events</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>