force-app/main/default/objects/Genesys_Session_Event__c/fields/OS_Family__c.field-meta.xml
<CustomField>
    <fullName>OS_Family__c</fullName>
    <label>OS Family</label>
    <length>255</length>
    <type>Text</type>
</CustomField>