force-app/main/default/objects/Genesys_Session_Event__c/fields/Page_Domain__c.field-meta.xml
<CustomField>
    <fullName>Page_Domain__c</fullName>
    <label>Page Domain</label>
    <length>255</length>
    <type>Text</type>
</CustomField>