force-app/main/default/objects/Genesys_Session_Event__c/fields/Page_Hostname__c.field-meta.xml
<CustomField>
    <fullName>Page_Hostname__c</fullName>
    <label>Page Hostname</label>
    <length>255</length>
    <type>Text</type>
</CustomField>