force-app/main/default/objects/Genesys_Session_Event__c/fields/Page_Language__c.field-meta.xml
<CustomField>
    <fullName>Page_Language__c</fullName>
    <label>Page Language</label>
    <length>255</length>
    <type>Text</type>
</CustomField>