force-app/main/default/objects/Genesys_Session_Event__c/fields/Page_Pathname__c.field-meta.xml
<CustomField>
    <fullName>Page_Pathname__c</fullName>
    <label>Page Pathname</label>
    <length>255</length>
    <type>Text</type>
</CustomField>