force-app/main/default/objects/Genesys_Session_Event__c/fields/Page_URL__c.field-meta.xml
<CustomField>
    <fullName>Page_URL__c</fullName>
    <label>Page URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>