force-app/main/default/objects/Genesys_Session_Event__c/fields/Referrer_Domain__c.field-meta.xml
<CustomField>
    <fullName>Referrer_Domain__c</fullName>
    <label>Referrer Domain</label>
    <length>255</length>
    <type>Text</type>
</CustomField>