force-app/main/default/objects/Genesys_Session_Event__c/fields/Referrer_Hostname__c.field-meta.xml
<CustomField>
    <fullName>Referrer_Hostname__c</fullName>
    <label>Referrer Hostname</label>
    <length>255</length>
    <type>Text</type>
</CustomField>