force-app/main/default/objects/Genesys_Session_Event__c/fields/Referrer_Medium__c.field-meta.xml
<CustomField>
    <fullName>Referrer_Medium__c</fullName>
    <label>Referrer Medium</label>
    <length>255</length>
    <type>Text</type>
</CustomField>