force-app/main/default/objects/Genesys_Session_Event__c/fields/Referrer_Pathname__c.field-meta.xml
<CustomField>
    <fullName>Referrer_Pathname__c</fullName>
    <label>Referrer Pathname</label>
    <length>255</length>
    <type>Text</type>
</CustomField>