force-app/main/default/objects/Genesys_Session_Event__c/fields/Referrer_URL__c.field-meta.xml
<CustomField>
    <fullName>Referrer_URL__c</fullName>
    <label>Referrer URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>