force-app/main/default/objects/Genesys_Session_Event__c/fields/Scroll_Depth_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Scroll_Depth_Percentage__c</fullName>
    <label>Scroll Depth Percentage</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>