force-app/main/default/objects/Genesys_Session_Event__c/fields/Segment_Id__c.field-meta.xml
<CustomField>
    <fullName>Segment_Id__c</fullName>
    <label>Segment ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>