force-app/main/default/objects/Genesys_Session_Event__c/fields/Session_Type__c.field-meta.xml
<CustomField>
    <fullName>Session_Type__c</fullName>
    <label>Session Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>