force-app/main/default/objects/Genesys_Session_Event__c/fields/Total_Event_Count__c.field-meta.xml
<CustomField>
    <fullName>Total_Event_Count__c</fullName>
    <label>Total Event Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>