force-app/main/default/objects/Genesys_Session_Event__c/fields/Traits__c.field-meta.xml
<CustomField>
    <fullName>Traits__c</fullName>
    <label>Traits</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>