force-app/main/default/objects/Genesys_Session_Event__c/fields/Viewport_Element_Selector__c.field-meta.xml
<CustomField>
    <fullName>Viewport_Element_Selector__c</fullName>
    <label>Viewport Element Selector</label>
    <length>255</length>
    <type>Text</type>
</CustomField>